--- a/revmortCalc.html
+++ b/revmortCalc.html
@@ -37,7 +37,7 @@
 			</div>
 		</main>
 		<footer>
-		<p>Co-hosted at <a href="https://www.nordburg.ca/calculators/revmortCalc/revmortCalc.html">nordburg.ca"</a> and <a href="https://andrewnordlund.github.io/revmortCalc/revmortCalc.html">GitHub Pages</a>.  Contribute to <a href="https://github.com/andrewnordlund/revmortCalc">the GitHub repo</a> if you so desire.</p>
+		<p>Co-hosted at <a href="https://www.nordburg.ca/calculators/revmortCalc/revmortCalc.html">nordburg.ca</a> and <a href="https://andrewnordlund.github.io/revmortCalc/revmortCalc.html">GitHub Pages</a>.  Contribute to <a href="https://github.com/andrewnordlund/revmortCalc">the GitHub repo</a> if you so desire.</p>
 		</footer>
 		<script type="text/Javascript">
 		init();
