--- a/revmortCalc.html
+++ b/revmortCalc.html
@@ -20,12 +20,12 @@
 					$ <input id="paymentAmnt" name="paymentAmnt">
 				</div>
 				<div class="fieldHolder">
-					<label for="interestRate">Current Interest Rate (ex: 2.64)</label>
-					<input id="interestRate" name="interestRate">
+					<label for="interestRate">Current Interest Rate Percent</label><span id="interestRateEx"> (ex: 2.64)</label>
+					<input id="interestRate" name="interestRate" type="number" min="0" max="100" step="0.01" value="1.74" size="5" aria-describedby="interestRateEx"> %
 				</div>
 				<div class="fieldHolder">
 					<label for="amort">Amortization Period (years)</label>
-					<input id="amort" name="amort">
+					<input id="amort" name="amort" type="range" min="5" max="40" step="5" value="25"> <output id="amortOutput" for="amort"></output>
 				</div>
 				<div class="fieldHolder">
 					<button id="calcBtn">Calculate</button>
