--- a/revmortCalc.html
+++ b/revmortCalc.html
@@ -17,7 +17,18 @@
 				<h2>Details</h2>
 				<div class="fieldHolder">
 					<label for="paymentAmnt">I can afford</label>
-					$ <input id="paymentAmnt" name="paymentAmnt">
+					<span id="dollars">$</span> <input id="paymentAmnt" name="paymentAmnt" aria-describedby="dollars">
+				</div>
+				<div class="fieldHolder">
+					<fieldset>
+						<legend>Per</legend>
+						<div>
+							<label><input type="radio" id="fortnight" name="payrate"> Fortnight</label>
+						</div>
+						<div>
+							<label><input type="radio" id="month" name="payrate"> Month</label>
+						</div>
+					</fieldset>
 				</div>
 				<div class="fieldHolder">
 					<label for="interestRate">Current Interest Rate Percent</label><span id="interestRateEx"> (ex: 2.64)</label>
